--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "Projeto pessoal para automatizar uma funcionalidade do sistema Filt",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:run": "cypress run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.6.4"
+    "@angular-devkit/build-angular": "^17.1.3",
+    "@angular/cli": "^17.1.3",
+    "@angular/common": "^17.1.3",
+    "@angular/core": "^17.1.3",
+    "@angular/platform-browser-dynamic": "^17.1.3",
+    "cypress": "^13.6.4",
+    "eslint": "^8.56.0"
   }
 }
