--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "@angular/platform-browser-dynamic": "^17.1.3",
     "cypress": "^13.6.4",
     "eslint": "^8.56.0"
+  },
+  "dependencies": {
+    "cypress-plugin-xhr-toggle": "^1.2.1"
   }
 }
